force-app/main/default/objects/Managed_Services_Billing_Landing__c/Managed_Services_Billing_Landing__c.object-meta.xml
<CustomObject>
    <label>Managed Services Billing Landing</label>
    <nameField>
        <label>Managed Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managed Services Billing Landing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>