force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Adjustment_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reasons__c</fullName>
    <label>Adjustment Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>