force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Advertiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Name__c</fullName>
    <label>Advertiser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>