force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Alph_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Alph_Campaign_Id__c</fullName>
    <label>Alph Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>