force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Amount_Changed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Changed?</label>
    <type>Checkbox</type>
</CustomField>