force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/BDA_Name__c.field-meta.xml
<CustomField>
    <fullName>BDA_Name__c</fullName>
    <label>BDA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>