force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Billable_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Billable_Revenue_USD__c</fullName>
    <label>Billable Revenue USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>