force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Bizops_Name__c.field-meta.xml
<CustomField>
    <fullName>Bizops_Name__c</fullName>
    <label>Bizops Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>