force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/BW_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>BW_Campaign_Id__c</fullName>
    <label>BW Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>