force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Calculated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Revenue__c</fullName>
    <label>Calculated Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>