force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Contracted_Units__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Units__c</fullName>
    <label>Contracted Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>