force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>