force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name__c</fullName>
    <label>CSM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>