force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Delivery_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Reason__c</fullName>
    <label>Delivery Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>