force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Delivery_Source__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Source__c</fullName>
    <label>Delivery Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>