force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>