force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Fifth_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Billing_Address__c</fullName>
    <label>Fifth Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>