force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Fifth_Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Billing_Phone__c</fullName>
    <label>Fifth Billing Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>