force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Fourth_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Billing_Contact__c</fullName>
    <label>Fourth Billing Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>