force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Holding_Company__c.field-meta.xml
<CustomField>
    <fullName>Holding_Company__c</fullName>
    <label>Holding Company</label>
    <length>150</length>
    <type>Text</type>
</CustomField>