force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Invoice_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Invoice_File_Path__c</fullName>
    <label>Invoice File Path</label>
    <type>Url</type>
</CustomField>