force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Invoice_line_item_description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_line_item_description__c</fullName>
    <label>Invoice line item description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>