force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Invoice_memo_title__c.field-meta.xml
<CustomField>
    <fullName>Invoice_memo_title__c</fullName>
    <label>Invoice memo title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>