force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Invoice_PDF_name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF_name__c</fullName>
    <label>Invoice PDF name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>