force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/IO_Cost__c.field-meta.xml
<CustomField>
    <fullName>IO_Cost__c</fullName>
    <label>IO Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>