force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/IO_Number__c.field-meta.xml
<CustomField>
    <fullName>IO_Number__c</fullName>
    <label>IO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>