force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Is_Placement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Placement_Completed__c</fullName>
    <label>Is Placement Completed ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>