force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Is_Roadblock__c.field-meta.xml
<CustomField>
    <fullName>Is_Roadblock__c</fullName>
    <label>Is Roadblock ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>