force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Last_Adjustment_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Adjustment_Time__c</fullName>
    <label>Last Adjustment Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>