force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Line_ItemName__c.field-meta.xml
<CustomField>
    <fullName>Line_ItemName__c</fullName>
    <label>Line ItemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>