force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms__c</fullName>
    <label>Net Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>