force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <label>Netsuite ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>