force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Netsuite_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Product_Name__c</fullName>
    <label>Netsuite Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>