force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Managed Services Billing Landing</relationshipLabel>
    <relationshipName>Managed_Services_Billing_Landing</relationshipName>
    <type>Lookup</type>
</CustomField>