force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Pending_On__c.field-meta.xml
<CustomField>
    <fullName>Pending_On__c</fullName>
    <label>Pending On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>