force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Placement_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Name__c</fullName>
    <label>Placement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>