force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Previously_Billed_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Previously_Billed_Impressions__c</fullName>
    <label>Previously Billed Impressions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>