force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Previously_Billed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Previously_Billed_Revenue__c</fullName>
    <label>Previously Billed Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>