force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address__c</fullName>
    <label>Primary Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>