force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Primary_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Email__c</fullName>
    <label>Primary Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>