force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>