force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Regenerate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Regenerate_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regenerate Invoice</label>
    <type>Checkbox</type>
</CustomField>