force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Remaining_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Impressions__c</fullName>
    <label>Remaining Impressions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>