force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Secondary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Billing_Address__c</fullName>
    <label>Secondary Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>