force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Secondary_Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Billing_Phone__c</fullName>
    <label>Secondary Billing Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>