force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <label>Service Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>