force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>