force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/SFDC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Product_Name__c</fullName>
    <label>SFDC Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>CTV Video</fullName>
            </value>
            <value>
                <fullName>CTV Native</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>