force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <label>SO# Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>