force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Special_Placement__c.field-meta.xml
<CustomField>
    <fullName>Special_Placement__c</fullName>
    <label>Special Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>