force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Changed?</label>
    <type>Checkbox</type>
</CustomField>