force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Third_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Third_Billing_Contact__c</fullName>
    <label>Third Billing Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>