force-app/main/default/objects/Managed_Services_Billing_Landing__c/fields/Third_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Third_Billing_Email__c</fullName>
    <label>Third Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>