force-app/main/default/objects/Managed_Services_Billing_Landing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Billable_Revenue_USD__c</columns>
    <columns>Advertiser_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>