force-app/main/default/objects/Managed_Services_Billing_Landing__c/listViews/Landing_Tables_Sept.listView-meta.xml
<ListView>
    <fullName>Landing_Tables_Sept</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Business_Vertical__c</columns>
    <columns>Service_Start_Date__c</columns>
    <columns>Service_End_Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Line_ItemName__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Billable_Revenue__c</columns>
    <columns>Billable_Revenue_USD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2024</value>
    </filters>
    <label>Landing Tables Sept</label>
</ListView>